{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 52,
  "lineage": "92994177-5225-2384-6d2e-a2c5d01678a3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486365525685:internet-gateway/igw-01fffc2764d175597",
            "id": "igw-01fffc2764d175597",
            "owner_id": "486365525685",
            "region": "us-east-1",
            "tags": {
              "Name": "KFC-igw1",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "Name": "KFC-igw1",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-061603b73646cb0bd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pir_rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486365525685:route-table/rtb-0be1ed3252e0fabf8",
            "id": "rtb-0be1ed3252e0fabf8",
            "owner_id": "486365525685",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "KFC-pir_rt2",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "Name": "KFC-pir_rt2",
              "managed_by": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-061603b73646cb0bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486365525685:route-table/rtb-0b3652452ae0b8125",
            "id": "rtb-0b3652452ae0b8125",
            "owner_id": "486365525685",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01fffc2764d175597",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "KFC-pub_rt1",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "Name": "KFC-pub_rt1",
              "managed_by": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-061603b73646cb0bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw1",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pirsub_rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d725c259ac24ed3",
            "region": "us-east-1",
            "route_table_id": "rtb-0be1ed3252e0fabf8",
            "subnet_id": "subnet-094202fe6a3a8feaa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.pir_rt2",
            "aws_subnet.pir_subnet2",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsub1_rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f309c7fd4aaedb1",
            "region": "us-east-1",
            "route_table_id": "rtb-0b3652452ae0b8125",
            "subnet_id": "subnet-09252465164b2d93c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw1",
            "aws_route_table.pub_rt1",
            "aws_subnet.pub_subnet1",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486365525685:security-group/sg-0969896ab2845ad43",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0969896ab2845ad43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "KFC-sg1",
            "name_prefix": "",
            "owner_id": "486365525685",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "KFC-sg12",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "Name": "KFC-sg12",
              "managed_by": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-061603b73646cb0bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pir_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486365525685:subnet/subnet-094202fe6a3a8feaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094202fe6a3a8feaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "486365525685",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "KFC-pir_subnet2",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "Name": "KFC-pir_subnet2",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-061603b73646cb0bd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486365525685:subnet/subnet-09252465164b2d93c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09252465164b2d93c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "486365525685",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "KFC-pub_subnet1",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "Name": "KFC-pub_subnet1",
              "managed_by": "Terraform"
            },
            "vpc_id": "vpc-061603b73646cb0bd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486365525685:vpc/vpc-061603b73646cb0bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ead72b31af57268",
            "default_route_table_id": "rtb-02f311f1bcd7670d0",
            "default_security_group_id": "sg-03388c3535a98899f",
            "dhcp_options_id": "dopt-094fa07f5ab297b23",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-061603b73646cb0bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f311f1bcd7670d0",
            "owner_id": "486365525685",
            "region": "us-east-1",
            "tags": {
              "Name": "KFC-vpc",
              "managed_by": "Terraform"
            },
            "tags_all": {
              "Name": "KFC-vpc",
              "managed_by": "Terraform"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}